<resources>
    <string name="app_name">SupplyCo</string>
    <string name="button_addSupplier">Add Supplier</string>
    <string name="button_saveSupplier">Save Supplier Details</string>
    <string name="button_deleteSupplier">Delete Supplier</string>
    <string name="hint_supplierName">Supplier Name</string>
    <string name="hint_supplierDescription">Supplier Description</string>
    <string name="hint_supplierContact">Supplier Contact</string>
    <string name="hint_supplierEmail">Supplier Email</string>
    <string name="hint_supplierAddress">Supplier Address</string>
    <string name="toolbar_title_add_supplier">Add New Supplier</string>
    <string name="toolbar_title_supplier_details">Supplier Details</string>
    <string name="toolbar_title_supplier_list">Suppliers</string>
    <string name="menu_addSupplier">Add</string>
    <string name="menu_cancelSupplier">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_chooseSupplierImage">Image</string>
    <string name="delete_allSuppliers">Delete All Suppliers</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="supplier_added">Supplier added successfully!</string>
    <string name="supplier_updated">Supplier updated successfully!</string>
    <string name="supplier_deleted">Supplier deleted successfully!</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="select_image">Select Image</string>
    <string name="button_deleteItem">Delete Item</string>
    <string name="button_addItem">Add Item</string>
    <string name="price">Price</string>
    <string name="toolbar_title_add_item">Add New Item</string>
    <string name="hint_itemName">Item Name</string>
    <string name="button_pick_date">Pick a date</string>
    <string name="release_date">Release Date</string>
    <string name="hint_itemPrice">Item Price</string>
    <string name="amount">Amount</string>
    <string name="hint_itemDescription">Item Description</string>
    <string name="toolbar_title_item_list">Items</string>
    <string name="menu_editSupplier">Edit</string>
    <string name="button_saveItem">Save Item Details</string>
    <string name="toolbar_title_item_details">Item Details</string>
    <string name="item_amount">Amount: %1$d</string>
    <string name="item_price">Price: €%1$.2f</string>
    <string name="item_release_date">Release Date: %1$s</string>
    <string name="item_release_date_not_set">Not set</string>
    <string name="delete_allItems">Delete All Items</string>
    <string name="new_user_register">New user? Register here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="supplyco_login">SupplyCo Login</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="supplyco_register">SupplyCo Register</string>
    <string name="logout">Logout</string>
    <string name="suppliers">Suppliers</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="enable_night_mode">Night Mode</string>
    <string name="start_scene">Start Scene</string>
    <string name="end_scene">End Scene</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="toolbar_title_supplier_map">Supplier Map</string>
    <string name="map_content_description">Supplier Location Map</string>
    <string name="supplier_image_description">Supplier Image</string>
    <string name="location">Location</string>
    <string name="location_not_set">Location Not Set</string>
    <string name="button_set_location">Set Location</string>
    <string name="location_format">Lat: %1$.4f, Lng: %2$.4f</string>
</resources>