<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView style="@style/ScrollView">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                <TextView
                        android:id="@+id/registerTitle"
                        style="@style/HeadingTextView"
                        android:text="@string/supplyco_register"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="24dp"/>

                <EditText
                        android:id="@+id/editRegisterUsername"
                        style="@style/EditText"
                        android:hint="@string/username"
                        android:inputType="textPersonName"/>

                <EditText
                        android:id="@+id/editRegisterEmail"
                        style="@style/EditText"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>

                <EditText
                        android:id="@+id/editRegisterPassword"
                        style="@style/EditText"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>

                <EditText
                        android:id="@+id/editRegisterConfirmPassword"
                        style="@style/EditText"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"/>

                <Button
                        android:id="@+id/buttonRegisterSubmit"
                        style="@style/Button"
                        android:text="@string/register"
                        app:cornerRadius="10dp"/>

                <Button
                        android:id="@+id/buttonBackToLogin"
                        style="@style/SecondaryButton"
                        android:text="@string/back_to_login"
                        app:cornerRadius="10dp"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
