<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colourOne"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView style="@style/ScrollView">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                <TextView
                        android:id="@+id/authTitle"
                        style="@style/HeadingTextView"
                        android:text="@string/supplyco_login"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="24dp"/>

                <EditText
                        android:id="@+id/editEmail"
                        style="@style/EditText"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress"/>

                <EditText
                        android:id="@+id/editPassword"
                        style="@style/EditText"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>

                <Button
                        android:id="@+id/buttonLogin"
                        style="@style/Button"
                        android:text="@string/login"
                        app:cornerRadius="10dp"/>

                <Button
                        android:id="@+id/buttonRegister"
                        style="@style/SecondaryButton"
                        android:text="@string/new_user_register"
                        app:cornerRadius="10dp"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
