<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.supplyco.views.settings.SettingsView">

    <FrameLayout
            android:id="@+id/scene_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/colourOne">

            <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appBarLayout"
                    android:fitsSystemWindows="true"
                    app:elevation="0dip"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    style="@style/AppBarLayout">

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbarSettings"
                        style="@style/ToolbarLayout">

                    <TextView
                            android:text="@string/toolbar_title_settings"
                            style="@style/ToolbarTextView" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                    style="@style/ScrollView">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchNightMode"
                            android:layout_width="133dp"
                            android:layout_height="wrap_content"
                            android:text="@string/enable_night_mode"
                            android:textSize="16sp"
                            android:layout_margin="20dp" />

                    <Button
                            android:id="@+id/buttonDeleteAll"
                            style="@style/Button"
                            android:text="@string/delete_allSuppliers"
                            android:visibility="invisible"
                            app:cornerRadius="10dp" />

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:clipToPadding="false"
            app:menu="@menu/menu_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>
